# FastAPIMovie

./: Dockerfile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  tempo.yaml
app/: .env.template  create_app.py  main.py  run.py
app/alembic/versions/: 2026_01_11_1915-597cd780ff4c_add_genre_model.py  2026_01_11_1929-0aa5efe66295_add_country_model.py  2026_01_11_2027-ba6e16865771_add_person_model.py  2026_01_11_2130-f52c5801c77c_add_movie_model.py  2026_01_11_2144-a712900b3a15_add_movie_shot_model.py  2026_01_11_2202-0fd38bd91605_add_movie_person_assoc_model.py  2026_01_14_1540-a6c0f9a05182_add_movie_genre_assoc_model.py  2026_01_14_1604-195838e2bbe3_add_movie_country_assoc_model.py  2026_01_16_1623-8108e91f6f75_add_check_constraints_to_country.py  2026_01_16_1635-acba0521b71f_add_check_constraints_to_genres.py  2026_01_16_1640-0f441058ac25_add_check_constraints_to_movie_shots.py  2026_01_16_1655-908cb82f5b8b_add_check_constraints_to_persons.py  (+3 more)
app/api/api_v1/: __init__.py  (+8 more)
app/app_types/: models.py  repositories.py  schemas.py
app/cache/: __init__.py  invalidator.py  movie.py  redis.py  types.py
app/constants/: __init__.py  base.py  country.py  genre.py  movie.py  movie_shot.py  person.py
app/core/: __init__.py  config.py  fs_router.py  taskiq_broker.py
app/db_integrity_handler/: __init__.py  base.py  country.py  genre.py  m2m.py  movie.py  movie_shot.py  person.py
app/dependencies/: cache.py  db.py  elastic.py  files.py  infrastructure.py  repositories.py  s3.py  services.py
app/elastic/: __init__.py  country.py  documents.py  elasticsearch.py  genre.py  movie.py  person.py  syncer.py
app/event_handlers/: __init__.py  country.py  genre.py  movie.py  movie_person.py  person.py
app/exceptions/: db.py  db_handlers.py  elastic.py  elastic_handlers.py  files.py  files_handlers.py  redis.py  redis_handlers.py  register.py  s3.py  s3_handlers.py
app/filters/: base.py  types.py
app/log/: __init__.py  log_types.py
app/metrics/: setup.py
app/repositories/: abc.py  base.py  country.py  genre.py  m2m.py  movie.py  movie_shot.py  person.py  signals.py  unit_of_work.py
app/schemas/: base.py  cache.py  country.py  db.py  event.py  genre.py  gunicorn.py  gunicorn_app_options.py  m2m.py  movie.py  movie_country.py  movie_genre.py  movie_person.py  movie_shot.py  person.py  s3_client_config.py
app/sentry/: setup.py
app/services/: abc.py  base.py  cache.py  country.py  file.py  filter.py  genre.py  m2m.py  movie.py  movie_shot.py  person.py  s3.py  search.py
app/signals/: __init__.py  base.py  country.py  event_list.py  event_session.py  genre.py  movie.py  movie_country.py  movie_genre.py  movie_person.py  movie_shot.py  person.py
app/storage/: abc.py  path_builder.py  s3.py  transaction.py  url_resolver.py
app/tasks/: __init__.py  elastic.py  s3.py
app/telemetry/: setup.py
app/utils/: __init__.py  file_transaction.py  movie_elastic_adapter.py  populate_association_map.py
(+14 files in other folders)
