[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
orjson = "^3.11.5"
aioboto3 = "^15.5.0"
types-aiobotocore = {extras = ["s3"], version = "^3.1.0"}
python-slugify = "==8.0.4"
gunicorn = "^24.0.0"
taskiq = "^0.12.1"
taskiq-aio-pika = "^0.5.0"
taskiq-aio-pika = "^0.4.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

